Fixed Problem 4 While my original solution made a similar result, I over complicated some things by involving columns instead of just limiting the size of the flex boxes. I also need to remember that I can apply settings to a parent that will apply to a child (i.e, setting the entire body to "$ text-align:center ;" instead of writing it in each individual child flexbox).
I also missed the requirement about the bottom margin of the title. Whoops!

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,7 +11,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  text-align: center;
+  margin-bottom: 32px;
+  
 }
 
 /* do not edit this footer */
@@ -33,11 +35,6 @@ img {
   
 }
 
-.content {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  align-items: center;
-  text-align: center;
+.content { 
   width: 200px;
 }
